# streamlit-data-analytics

./: .gitignore  .replit  ChkSqlAlchemy.py  README.md  ToRunLocally.txt  config.py  database.py  main.py  pyproject.toml  replit.nix  sample_data.csv  testdb.py  utils.py
.streamlit/: config.toml
components/: advanced_analysis.py  analysis.py  data_explorer.py  data_upload.py  visualizations.py
