[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.1",
    "plotly==5.19.0",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.27",
    "streamlit==1.32.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
]
